--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>séries</title>
+    <style>
+        body{
+            background-color: rgb(52, 231, 159);
+        }
+    </style>
 </head>
 <body>
     <h1>Meu Primeiro Site</h1>
