--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>séries</title>
     <style>
         body{
-            background-color: rgb(52, 231, 159);
+            background-color: rgb(0, 51, 255);
+        }
+        h1{
+            color: rgb(214, 196, 173);
         }
     </style>
 </head>
